# FluidSimulations-CUDA

./: README.md
EXT-hfj/: setup_project.py
EXT-hfj/HoudiniExtensionProject/: CMakeLists.txt  LICENSE
EXT-hfj/HoudiniExtensionProject/docs/: design_notes.md
EXT-hfj/HoudiniExtensionProject/plugins/: CMakeLists.txt
EXT-hfj/HoudiniExtensionProject/plugins/houdini_plugins/: HoudiniPlugin.cpp  HoudiniPlugin.h
EXT-hfj/HoudiniExtensionProject/src/amr/: CMakeLists.txt  SOP_AMR.cpp  SOP_AMR.h
EXT-hfj/HoudiniExtensionProject/src/amr/tests/: test_amr.cpp
EXT-hfj/HoudiniExtensionProject/src/cuda_integration/: CMakeLists.txt  SOP_CudaIntegration.cpp  SOP_CudaIntegration.h
EXT-hfj/HoudiniExtensionProject/src/cuda_integration/kernels/: advection.cu
EXT-hfj/HoudiniExtensionProject/src/cuda_integration/tests/: test_advection.cpp
EXT-hfj/HoudiniExtensionProject/src/vdb_management/: CMakeLists.txt  SOP_VDBManagement.cpp  SOP_VDBManagement.h
EXT-hfj/HoudiniExtensionProject/src/vdb_management/tests/: test_vdb.cpp
EXT-hfj/HoudiniExtensionProject/tests/: CMakeLists.txt  integration_tests.cpp
